--- a/Readme
+++ b/Readme
@@ -1,7 +1,7 @@
 TEAM TITLE : CREATING A SOCIAL MEDIA AD CAMPAIGN IN FACEBOOK
 
-TEAM LEAD           : SRIKUSAN A
-TEAM MEMBER 1       : VIJAYAN
-TEAM MEMBER 2       : VIGNESH PRABHU
-TEAM MEMBER 3       : VANARAJ
+TEAM LEAD           : SRIKUSAN A (NM ID : 939663593A2E76389EF40404BB162D3D)
+TEAM MEMBER 1       : VIJAYAN S (NM ID : 98D251914C3993985FD49E891909A31C)
+TEAM MEMBER 2       : VIGNESH PRABHU T (NM ID : BF64694D7F8C350AEE24EA56383A62A6)
+TEAM MEMBER 3       : VANARAJ K (NM ID : AF2C31169095E7B99A747D270343A5A6)
 
